feat: implement plugin management improvements with added download, update, and installation functionality